--- a/demo-app/build.gradle
+++ b/demo-app/build.gradle
@@ -12,8 +12,14 @@ repositories {
 
 // tag::jar[]
 jar {
-    baseName = 'gs-gradle'
+    baseName = 'demo-app-artifact'
     version =  '0.1.0'
+     manifest {
+    attributes(
+      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+      'Main-Class': 'hello.HelloWorld'
+    )
+  }
 }
 // end::jar[]
 
